Set Firefox 43 beta as base